<resources>
    <string name="app_name">WeatherApplicationAssessment</string>
    <string name="welcome_to">Welcome to</string>
    <string name="head_name">WeatherApp</string>
    <string name="check_weather">Check Weather</string>
    <string name="manage_locations">Manage Locations</string>
    <string name="choice">Enter location ID</string>
    <string name="city">Aberdeen</string>
    <string name="city_id">123456</string>
    <string name="current_temp">15 Deg</string>
    <string name="condition">Clouds</string>
    <string name="cond_desc">Broken Clouds</string>
    <string name="humidity_desc">54%</string>
    <string name="humidity">Humidity</string>
    <string name="min_max_temp">Temperature</string>
    <string name="max_temp">18</string>
    <string name="min_temp">-3</string>
    <string name="wind">Wind</string>
    <string name="wind_desc">18m/s</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_desc">1016</string>
    <string name="enter_id">Enter location ID</string>
    <string name="title_activity_locations">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
