<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CheckWeather"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="162dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="8dp"
        android:text="@string/city"
        app:layout_constraintBottom_toTopOf="@+id/city_loc_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/city_loc_id"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="45dp"
        android:text="@string/city_id"
        app:layout_constraintBottom_toTopOf="@+id/tv_current_temp"
        app:layout_constraintEnd_toEndOf="@+id/tv_city"
        app:layout_constraintStart_toStartOf="@+id/tv_city" />

    <TextView
        android:id="@+id/tv_current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="34dp"
        android:text="@string/current_temp"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_humidity"
        app:layout_constraintEnd_toEndOf="@+id/city_loc_id"
        app:layout_constraintStart_toStartOf="@+id/tv_humidity_desc" />

    <TextView
        android:id="@+id/tv_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/condition"
        app:layout_constraintStart_toEndOf="@+id/tv_current_temp"
        app:layout_constraintTop_toTopOf="@+id/tv_current_temp" />

    <TextView
        android:id="@+id/tv_cond_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cond_desc"
        app:layout_constraintBottom_toBottomOf="@+id/tv_current_temp"
        app:layout_constraintStart_toStartOf="@+id/tv_condition" />

    <TextView
        android:id="@+id/tv_humidity_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/humidity_desc"
        app:layout_constraintEnd_toEndOf="@+id/tv_humidity"
        app:layout_constraintStart_toStartOf="@+id/tv_humidity"
        app:layout_constraintTop_toBottomOf="@+id/tv_humidity" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="181dp"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_min_max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_max_temp"
        app:layout_constraintEnd_toStartOf="@+id/tv_cond_desc"
        app:layout_constraintTop_toTopOf="@+id/tv_humidity" />

    <TextView
        android:id="@+id/tv_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/max_temp"
        app:layout_constraintStart_toStartOf="@+id/tv_min_max_temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_max_temp" />

    <TextView
        android:id="@+id/tv_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="17dp"
        android:text="@string/wind"
        app:layout_constraintBottom_toTopOf="@+id/tv_wind_desc"
        app:layout_constraintEnd_toEndOf="@+id/tv_cond_desc" />

    <TextView
        android:id="@+id/tv_wind_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/wind_desc"
        app:layout_constraintEnd_toEndOf="@+id/tv_wind"
        app:layout_constraintStart_toStartOf="@+id/tv_wind"
        app:layout_constraintTop_toBottomOf="@+id/tv_pressure" />

    <TextView
        android:id="@+id/tv_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pressure"
        app:layout_constraintEnd_toEndOf="@+id/tv_pressure_desc"
        app:layout_constraintStart_toStartOf="@+id/tv_pressure_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_cond_desc" />

    <TextView
        android:id="@+id/tv_pressure_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="7dp"
        android:text="@string/pressure_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_wind"
        app:layout_constraintTop_toBottomOf="@+id/tv_pressure" />

</android.support.constraint.ConstraintLayout>